# RAG

./: api.py  embedding_generator.py  main.py  pyproject.toml  rag.py  rag_pipline.py  requirement.txt
notebooks/: document.ipynb
